--- a/src/app/pages/login-page/login-page.component.css
+++ b/src/app/pages/login-page/login-page.component.css
@@ -1,8 +1,15 @@
-.flex-container>div {
-    background-color: #f1f1f1;
-    width: 100px;
-    margin: 10px;
-    text-align: center;
-    line-height: 75px;
-    font-size: 30px;
+.main-div mat-card {
+    padding: 0px;
+
+}
+
+.login-form {
+    padding: 20px;
+}
+
+.submit-button {
+    background-color: black;
+    color: white;
+    width: 100%;
+    height: 100%;
 }
