--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<div fxLayoutAlign="center center " fxFlexFill class="main-div">
+<!-- <div fxLayoutAlign="center center " fxFlexFill class="main-div">
     <mat-card fxflex="25">
 
         <form (ngSubmit)="onSubmit()" fxLayoutAlign="stretch" fxLayout="column" class="login-form">
@@ -10,6 +10,27 @@
             <mat-form-field>
                 <input matInput type="password" placeholder="password" id="password" [(ngModel)]="password"
                     name="password">
+            </mat-form-field>
+
+            <button mat-button type="submit" class="submit-button">Login</button>
+        </form>
+    </mat-card>
+</div> -->
+
+
+<div fxLayoutAlign="center center " fxFlexFill class="main-div">
+    <mat-card fxflex="25">
+
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" fxLayoutAlign="stretch" fxLayout="column"
+            class="login-form">
+            <mat-toolbar color="primary">Login </mat-toolbar>
+            <mat-form-field>
+                <input [formControl]="loginForm.controls.email" matInput placeholder="email" id="email" name="email">
+            </mat-form-field>
+
+            <mat-form-field>
+                <input [formControl]="loginForm.controls.password" matInput type="password" placeholder="password"
+                    id="password" name="password">
             </mat-form-field>
 
             <button mat-button type="submit" class="submit-button">Login</button>
