--- a/src/app/pages/login-page/login-page.component.css
+++ b/src/app/pages/login-page/login-page.component.css
@@ -13,3 +13,11 @@
     width: 100%;
     height: 100%;
 }
+
+.mat-spinner {
+
+    ::ng-deep circle {
+        stroke: orange;
+        size: 5px;
+    }
+}
