[add] add game modal wip

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,3 +1,4 @@
+<h1> Library</h1>
 <div class="game-container">
     <!-- for every retrieved game display a card with information -->
     <!-- <mat-card>
@@ -19,4 +20,6 @@
         </div>
     </mat-card>
     }
+
+    <h1 (click)="openAddGameDialog()"> +</h1>
 </div>
