--- a/src/app/components/add-game/add-game.component.html
+++ b/src/app/components/add-game/add-game.component.html
@@ -1,22 +1,24 @@
 <mat-dialog-content>
-    <h2 mat-dialog-title> Select game to add to your list</h2>
-    <mat-form-field>
-        <mat-label>Select a game to add to your list</mat-label>
-        <mat-select>
-            <mat-option>
 
-                <ngx-mat-select-search [formControl]="gameSearchCtrl" placeholderLabel="Search..."
-                    noEntriesFoundLabel="No results found">
-                </ngx-mat-select-search>
+    <mat-icon class="navbar-icon-right" aria-hidden="false" aria-label="exit" fontIcon="close" class="close-button"
+        (click)="closeDialog()"></mat-icon>
+
+    <h2 mat-dialog-title> Select a game to add to your list</h2>
+    <mat-label class="custom-label">Games</mat-label>
+
+    <mat-form-field class="custom-form-field">
+        <mat-select [formControl]="gameCtrl" placeholder="Game" #singleSelect>
+            <mat-option>
+                <ngx-mat-select-search [formControl]="gameFilterCtrl"></ngx-mat-select-search>
             </mat-option>
 
-
-            @for (food of foods; track food) {
-            <mat-option [value]="food.value">{{food.viewValue}}</mat-option>
+            @for (game of games; track games) {
+            <mat-option [value]="game">{{game.name}}</mat-option>
             }
         </mat-select>
 
     </mat-form-field>
 
-    <button (click)="addGameToUser()">add game to library</button>
+    <button (click)="addGameToUser()" class="custom-button">add game to library</button>
+
 </mat-dialog-content>
