[add] temp logo to game detail

--- a/src/app/pages/game-detail/game-detail.component.html
+++ b/src/app/pages/game-detail/game-detail.component.html
@@ -1,7 +1,7 @@
 <div class="game-info-container">
 
     <div class="game-logo">
-        <span>Game Logo</span>
+        <img mat-card-image class="game-image" src="assets/img/wip.jpg" alt="">
     </div>
 
     <div class="game-details">
