--- a/src/app/pages/game-detail/game-detail.component.css
+++ b/src/app/pages/game-detail/game-detail.component.css
@@ -5,7 +5,7 @@
 }
 
 .game-logo {
-    margin-top: 25px;
+    /* margin-top: 25px;
     width: 250px;
     height: 250px;
     background: #ddd;
@@ -14,7 +14,7 @@
     justify-content: center;
     font-size: 12px;
     color: #888;
-    border-radius: 5px;
+    border-radius: 5px; */
 }
 
 .game-details {
