[add] language module

--- a/src/app/components/navbar/navbar-component.html
+++ b/src/app/components/navbar/navbar-component.html
@@ -7,12 +7,18 @@
     <p>GSDB</p>
 
     <span class="fill-space"></span>
-    <p> your name here temp
+    <p> {{username}}
     <p>
         <mat-icon class="navbar-icon" (click)="navigateToUserRole()" aria-hidden="false" aria-label="Example home icon"
             fontIcon="manage_accounts"></mat-icon>
-        <mat-icon class="navbar-icon-right" (click)="switchLanguage()" aria-hidden="false"
+        <mat-icon [matMenuTriggerFor]="menu" class="navbar-icon-right" aria-hidden="false"
             aria-label="Example language icon" fontIcon="language"></mat-icon>
+
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="switchLanguage('en')">{{'navbar.language.english' | translate}}</button>
+            <button mat-menu-item (click)="switchLanguage('nl')">{{'navbar.language.dutch' | translate}}</button>
+        </mat-menu>
+
         <mat-icon class="navbar-icon-right" (click)="navigateToUserDetailScreen()" aria-hidden="false"
             aria-label="Example account circle icon" fontIcon="account_circle"></mat-icon>
         <mat-icon class="navbar-icon-right" (click)="logout()" aria-hidden="false" aria-label="Example logout icon"
