--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<h1> Library</h1>
+<h1> {{'home.library' | translate}}</h1>
 <div class="game-container">
 
     @for (game of games; track game.id) {
