--- a/src/app/components/add-game/add-game.component.html
+++ b/src/app/components/add-game/add-game.component.html
@@ -3,11 +3,11 @@
     <mat-icon class="navbar-icon-right" aria-hidden="false" aria-label="exit" fontIcon="close" class="close-button"
         (click)="closeDialog()"></mat-icon>
 
-    <h2 mat-dialog-title> Select a game to add to your list</h2>
-    <mat-label class="custom-label">Games</mat-label>
+    <h2 mat-dialog-title> {{'game.addModal.info' | translate}}</h2>
+    <mat-label class="custom-label">{{'game.addModal.games' | translate}}</mat-label>
 
     <mat-form-field class="custom-form-field">
-        <mat-select [formControl]="gameCtrl" placeholder="Game" #singleSelect>
+        <mat-select [formControl]="gameCtrl" placeholder="{{'game.addModal.game' | translate}}" #singleSelect>
             <mat-option>
                 <ngx-mat-select-search [formControl]="gameFilterCtrl"></ngx-mat-select-search>
             </mat-option>
@@ -19,6 +19,6 @@
 
     </mat-form-field>
 
-    <button (click)="addGameToUser()" class="custom-button">add game to library</button>
+    <button (click)="addGameToUser()" class="custom-button">{{'game.addModal.addGame' | translate}}</button>
 
 </mat-dialog-content>
