--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -2,9 +2,9 @@
     <mat-card fxflex="25">
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" fxLayoutAlign="stretch" fxLayout="column"
             class="login-form">
-            <mat-toolbar color="primary">Login </mat-toolbar>
+            <mat-toolbar color="primary">{{'login.login' | translate}} </mat-toolbar>
             @if (displayEmailError) {
-            <mat-error>Invalid email</mat-error>
+            <mat-error>{{'login.invalidEmail' | translate}}</mat-error>
             }
             <mat-form-field>
                 <input [formControl]="loginForm.controls.email" matInput placeholder="email" id="email" name="email">
@@ -12,7 +12,7 @@
             </mat-form-field>
 
             @if (displayPasswordError) {
-            <mat-error>Please enter a password</mat-error>
+            <mat-error>{{'login.invalidPassword' | translate}}</mat-error>
             }
             <mat-form-field>
                 <input [formControl]="loginForm.controls.password" matInput type="password" placeholder="password"
@@ -20,10 +20,10 @@
             </mat-form-field>
 
             @if (displayAuthError) {
-            <mat-error>Invalid email and password</mat-error>
+            <mat-error>{{'login.invalidLogin' | translate}}</mat-error>
             }
 
-            <button mat-button type="submit" class="submit-button">Login
+            <button mat-button type="submit" class="submit-button">{{'login.login' | translate}}
             </button>
             @if(isLoggingIn){
             <mat-spinner class="mat-spinner"> </mat-spinner>
