--- a/src/app/pages/game-detail/game-detail.component.css
+++ b/src/app/pages/game-detail/game-detail.component.css
@@ -29,13 +29,15 @@ label {
 }
 
 input {
-    width: 250px;
+    width: 600px;
+    max-width: 600px;
     padding: 12px;
     border: 2px solid #ddd;
     border-radius: 8px;
     font-size: 16px;
     outline: none;
     background: white;
+    flex-grow: 1;
 }
 
 form {
