--- a/src/app/components/navbar/navbar-component.html
+++ b/src/app/components/navbar/navbar-component.html
@@ -19,8 +19,10 @@
             <button mat-menu-item (click)="switchLanguage('nl')">{{'navbar.language.dutch' | translate}}</button>
         </mat-menu>
 
-        <mat-icon class="navbar-icon-right" (click)="navigateToUserDetailScreen()" aria-hidden="false"
-            aria-label="Example account circle icon" fontIcon="account_circle"></mat-icon>
+        @if (isLoggedIn) { <mat-icon class="navbar-icon-right" (click)="navigateToUserDetailScreen()"
+            aria-hidden="false" aria-label="Example account circle icon" fontIcon="account_circle"></mat-icon>}
+
+
         <mat-icon class="navbar-icon-right" (click)="logout()" aria-hidden="false" aria-label="Example logout icon"
             fontIcon="logout"></mat-icon>
 
