--- a/src/app/pages/user-role/user-role.component.html
+++ b/src/app/pages/user-role/user-role.component.html
@@ -1,1 +1,48 @@
 <p>user-role works!</p>
+
+
+<div class="flexbox-container">
+    <ul>
+        @for (user of users; track user.id) {
+
+        <mat-card class="role-card">
+            <div class="card-content">
+
+                <mat-form-field>
+
+                    @if (user.role != null){
+                    <mat-select [formControl]="roleControl">
+                        @for (role of roles; track role ){
+                        <mat-option [value]="role">
+                            {{role.name}}
+                        </mat-option>
+                        }
+
+                    </mat-select>
+                    } @else {
+
+                    <mat-select [formControl]="roleControl">
+                        @for (role of roles; track role ){
+                        <mat-option [value]="role">
+                            {{role.name}}
+                        </mat-option>
+                        }
+                    </mat-select>
+                    }
+
+
+
+
+
+
+
+                </mat-form-field>
+                <mat-icon class="navbar-icon-right" aria-hidden="false" aria-label="exit" fontIcon="save"
+                    class="close-button" (click)="updateUserRole(user.id)"></mat-icon>
+
+                <p> {{user.username}}</p>
+            </div>
+        </mat-card>
+        }
+    </ul>
+</div>
