--- a/src/app/pages/change-password/change-password.component.html
+++ b/src/app/pages/change-password/change-password.component.html
@@ -1,30 +1,51 @@
-<p>change-password works!</p>
-
-<div>
+<div class="form-container">
 
     <mat-card>
-        <form [formGroup]="changePasswordForm">
-            <mat-form-field>
-                <input matInput [formControl]="changePasswordForm.controls.oldPassword" placeholder="old password">
+        <form [formGroup]="changePasswordForm" (ngSubmit)="ChangePassword()" class="change-password-form">
+            @if(isOldPasswordPresent){
+            <mat-error>{{'changePassword.noOldPassword' | translate}}</mat-error>
+            }
+            <p>{{'changePassword.oldPassword' | translate}} </p>
 
+            <mat-form-field>
+                <input matInput [formControl]="changePasswordForm.controls.oldPassword"
+                    placeholder="{{'changePassword.oldPassword' | translate}}">
             </mat-form-field>
 
+            @if(isNewPasswordPresent){
+            <mat-error>{{'changePassword.noNewPassword' | translate}}</mat-error>
+            }
+            <p> {{'changePassword.newPassword' | translate}} </p>
             <mat-form-field>
-                <input matInput [formControl]="changePasswordForm.controls.newPassword" placeholder="new password">
+                <input matInput [formControl]="changePasswordForm.controls.newPassword"
+                    placeholder="{{'changePassword.newPassword' | translate}}">
             </mat-form-field>
 
-            <mat-form-field>
+            @if(isNewPasswordConfirmationPresent){
+            <mat-error>{{'changePassword.noNewPasswordConfirmation' | translate}}</mat-error>
+            }
+
+            @if(isNewPasswordConfirmationValid){
+            <mat-error>{{'changePassword.newPasswordMismatch' | translate}}</mat-error>
+            }
+            <p> {{'changePassword.newPasswordConfirmation' | translate}} </p>
+            <mat-form-field class="form-field">
                 <input matInput [formControl]="changePasswordForm.controls.newPasswordConfirmation"
-                    placeholder="confirm New password">
+                    placeholder="{{'changePassword.newPasswordConfirmation' | translate}}" class="form-input">
             </mat-form-field>
 
-            <button mat-button type="submit" (click)="ChangePassword()" class="submit-button">submit
+            @if (changeError) {
+            <mat-error>{{'changePassword.error' | translate}}</mat-error>
+            }
+
+
+            <button [disabled]="isSaving" class="submit-button" mat-button type="submit" (click)="ChangePassword()"
+                class="submit-button">{{'changePassword.buttonText' | translate}}
             </button>
             @if(isSaving){
             <mat-spinner class="mat-spinner"> </mat-spinner>
             }
         </form>
-
 
 
     </mat-card>
