[add] wip user details page

--- a/src/app/components/navbar/navbar-component.html
+++ b/src/app/components/navbar/navbar-component.html
@@ -25,9 +25,7 @@
 
 
         <mat-icon class="navbar-icon-right" (click)="logout()" aria-hidden="false" aria-label="Example logout icon"
-            fontIcon="logout"></mat-icon>}
+            fontIcon="logout"></mat-icon>
+        }
 
-
-        <mat-icon class="navbar-icon-right" (click)="ChangePassword()" aria-hidden="false"
-            aria-label="Example logout icon" fontIcon="login"></mat-icon>
 </mat-toolbar>
