--- a/src/app/pages/change-password/change-password.component.html
+++ b/src/app/pages/change-password/change-password.component.html
@@ -1,3 +1,6 @@
+<mat-icon class="navbar-icon-right" aria-hidden="false" aria-label="exit" fontIcon="close" class="close-button"
+    (click)="returnToUserDetailsPage()"></mat-icon>
+
 <div class="form-container">
 
     <mat-card>
