[add] get review by game

--- a/src/app/pages/game-detail/game-detail.component.html
+++ b/src/app/pages/game-detail/game-detail.component.html
@@ -28,4 +28,10 @@
         </form>
     </div>
 
+    <div>
+        @for (review of reviews; track review) {
+        <p>{{review.username}}: {{review.description}}</p>
+        }
+    </div>
+
 </div>
