--- a/src/app/pages/game-detail/game-detail.component.html
+++ b/src/app/pages/game-detail/game-detail.component.html
@@ -28,10 +28,11 @@
         </form>
     </div>
 
-    <div>
+    <div class="review-box">
         @for (review of reviews; track review) {
-        <p>{{review.username}}: {{review.description}}</p>
+        <app-review [review]="review"> </app-review>
         }
     </div>
+
 
 </div>
