[add] edit review

--- a/src/app/components/review/review/review.component.html
+++ b/src/app/components/review/review/review.component.html
@@ -4,6 +4,8 @@
 
     <p>{{review.username}}</p>
     <p>{{review.postedDate}}</p>
+    <p>{{review.recentlyUpdatedDate}}</p>
+
 
     <h3> opinion</h3>
     <p>{{review.description}}</p>
