--- a/src/app/components/review/review/review.component.css
+++ b/src/app/components/review/review/review.component.css
@@ -1,4 +1,29 @@
 .mat-card {
-    width: auto;
-    padding: 5px;
+    /* width: auto;
+    padding: 5px; */
+
+    background-color: white;
+    border-radius: 10px;
+    padding: 15px;
+    width: 400px;
+    font-family: sans-serif;
+    position: relative;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+
+
+}
+
+.description-input {
+    width: fit-content
+}
+
+
+.user-info {
+    display: inline-block;
+    align-items: start
+}
+
+.buttons {
+    display: flex;
+    align-items: center;
 }
