--- a/src/app/components/review/review/delete_review_confirm_dialog/delete-review-dialog/delete-review-dialog.component.html
+++ b/src/app/components/review/review/delete_review_confirm_dialog/delete-review-dialog/delete-review-dialog.component.html
@@ -1,5 +1,5 @@
 <mat-dialog-content>
-    <h1> {{'review.deleteWarning' | translate}} </h1>
+    <h1> {{'review.deleteWarning' | translate}}? </h1>
 
     <div>
 
