--- a/src/app/pages/game-detail/game-detail.component.css
+++ b/src/app/pages/game-detail/game-detail.component.css
@@ -61,3 +61,13 @@ form {
     justify-content: center;
     align-items: flex-start;
 }
+
+
+.textarea {
+    height: 200px;
+    padding: 15px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    resize: vertical;
+}
