--- a/src/app/pages/game-detail/game-detail.component.html
+++ b/src/app/pages/game-detail/game-detail.component.html
@@ -35,8 +35,19 @@
     </div>
 
     @if(reviewAddable){
-    <button> add review</button>
-    <h1> HEEY</h1>
+    <div>
+        <mat-card>
+
+            <h1> Enter your review</h1>
+            <textarea [formControl]="addReviewForm" class="textarea"></textarea>
+            <button (click)="addReview()"> add review</button>
+
+            @if(isSavingNewReview){
+            <mat-spinner class="mat-spinner"></mat-spinner>
+            }
+
+        </mat-card>
+    </div>
     }
 
 </div>
