--- a/src/app/components/add-new-game/add-new-game/add-new-game.component.html
+++ b/src/app/components/add-new-game/add-new-game/add-new-game.component.html
@@ -4,7 +4,7 @@
     <mat-icon class="navbar-icon-right" aria-hidden="false" aria-label="exit" fontIcon="close" class="close-button"
         (click)="closeDialog()"></mat-icon>
 
-    <h2 mat-dialog-title> {{'game.addModal.info' | translate}}</h2>
+    <h2 mat-dialog-title> {{'game.addNewGameModal.info' | translate}}</h2>
     <mat-label class="custom-label">{{'game.addNewGameModal.name' |
         translate}}</mat-label>
     <form [formGroup]="gameFormGroup">
