[add] update user role

--- a/src/app/components/user-role/user-role-card.component.html
+++ b/src/app/components/user-role/user-role-card.component.html
@@ -10,6 +10,22 @@
     <div class="card-content">
 
         <h1>{{user.userName}}</h1>
+
+
+
+        <p> Role</p>
+        <mat-form-field>
+            <mat-select [formControl]="roleControl" placeholder="{{user.role.name}}">
+                @for (role of roles; track role.id) {
+                <mat-option [value]="role"> {{role.name}}</mat-option>
+                }
+            </mat-select>
+        </mat-form-field>
+
+
+
+
+
         <!-- <mat-form-field> -->
         <!-- 
 
@@ -37,7 +53,7 @@
 
         <!-- </mat-form-field> -->
         <mat-icon class="save-icon" aria-hidden="false" aria-label="exit" fontIcon="save" class="close-button"
-            (click)="updateUserRole(user.id)"></mat-icon>
+            (click)="updateUserRole()"></mat-icon>
 
 
     </div>
