--- a/src/app/components/user-role/user-role-card.component.html
+++ b/src/app/components/user-role/user-role-card.component.html
@@ -1,7 +1,3 @@
-<p>user-role works!</p>
-
-<h1> this is ADEA REAL ONE </h1>
-
 @if(isSaving){
 <mat-spinner class="mat-spinner"> </mat-spinner>
 }
@@ -9,11 +5,10 @@
 <mat-card class="mat-card">
     <div class="card-content">
 
-        <h1>{{user.userName}}</h1>
+        <p> User: {{user.userName}}</p>
 
 
-
-        <p> Role</p>
+        <p> Role:</p>
         <mat-form-field>
             <mat-select [formControl]="roleControl" placeholder="{{user.role.name}}">
                 @for (role of roles; track role.id) {
@@ -25,33 +20,6 @@
 
 
 
-
-        <!-- <mat-form-field> -->
-        <!-- 
-
-            @if (user.role != null){
-            <mat-select [formControl]="roleControl">
-                @for (role of roles; track role ){
-                <mat-option [value]="role">
-                    {{role.name}}
-                </mat-option>
-                }
-
-            </mat-select>
-            } @else {
-
-            <mat-select [formControl]="roleControl">
-                @for (role of roles; track role ){
-                <mat-option [value]="role">
-                    {{role.name}}
-                </mat-option>
-                }
-            </mat-select>
-            } -->
-
-
-
-        <!-- </mat-form-field> -->
         <mat-icon class="save-icon" aria-hidden="false" aria-label="exit" fontIcon="save" class="close-button"
             (click)="updateUserRole()"></mat-icon>
 
