--- a/src/app/pages/user-role/user-role.component.html
+++ b/src/app/pages/user-role/user-role.component.html
@@ -7,44 +7,6 @@
     }
     @for (user of users; track user.id) {
 
-    <app-user-role-card [user]="user" [roles]="roles"></app-user-role-card>
-
-
-    <!-- <mat-card class="mat-card">
-        <div class="card-content">
-
-            <h1>{{user.userName}}</h1>
-            <mat-form-field>
-
-
-                @if (user.role != null){
-                <mat-select [formControl]="roleControl">
-                    @for (role of roles; track role ){
-                    <mat-option [value]="role">
-                        {{role.name}}
-                    </mat-option>
-                    }
-
-                </mat-select>
-                } @else {
-
-                <mat-select [formControl]="roleControl">
-                    @for (role of roles; track role ){
-                    <mat-option [value]="role">
-                        {{role.name}}
-                    </mat-option>
-                    }
-                </mat-select>
-                }
-
-
-
-            </mat-form-field>
-            <mat-icon class="save-icon" aria-hidden="false" aria-label="exit" fontIcon="save" class="close-button"
-                (click)="updateUserRole(user.id)"></mat-icon>
-
-
-        </div>
-    </mat-card> -->
+    <app-user-role-card class="user-role-card" [user]="user" [roles]="roles"></app-user-role-card>
     }
 </div>
